# repopulse

./: .env.demo  .gitattributes  .gitignore  .npmrc  Cargo.toml  README.md  install-rpi.sh  installer  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  github.rs  insights.rs  lib.rs  models.rs  oauth.rs  sync.rs  token.rs
packaging/systemd/: repopulse.service.example
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: Dashboard.tsx  EmptyState.tsx  ExportPanel.tsx  InsightsPanel.tsx  Layout.tsx  RepoManager.tsx  Setup.tsx  StarsChart.tsx  TrafficCharts.tsx
src/lib/: demoApi.ts  tauri.ts
src/types/: index.ts
