[package]
name = "repopulse-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
repopulse-core = { path = "../crates/core" }
anyhow = "1"
dirs = "5"
open = "5"
