[package]
name = "repopulse-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "repopulse"
path = "src/main.rs"

[dependencies]
repopulse-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
dirs = "5"
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
